--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -35,3 +35,18 @@ build/
 # Application configuration
 src/main/resources/application.yaml
 src/main/resources/application.yml
+.env
+.env.local
+
+### OS specific ###
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+### Log files ###
+*.log
+logs/
